Create first test in spec.js

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="build/css/vendor.css">
+    <link href="build/css/vendor.css" rel="stylesheet" type="text/css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <title>Galactic-Calculator</title>
@@ -14,13 +13,13 @@
         <input id="age" type="number"><br>
         <label for = "lifeExp">Enter Life Expectancy:</label>
         <input id="lifeExp" type="number"><br>
-        <button type="submit">Submit</button>
+        <button class="btn btn-info" type="submit">Submit</button>
       </form>
       <table>
         <tr>
           <th>Planet</th>
-          <th>Age on that planet<th>
-          <th>Life Expectancy<th>
+          <th>Age on that planet</th>
+          <th>Life Expectancy</th>
         </tr>
         <div id = "result">
         </div>
