Add bootstrap to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Galactic-Calculator</title>
   </head>
   <body>
-      <h1>Galactic-Calculator</h1>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Galactic Calculator</h1>
+        <p class="lead">An application that determines a user’s age based on a planet’s solar years.</p>
+      </div>
+    </div>
       <form id = "yearForm">
         <label for = "age">Enter your age:</label>
         <input id="age" type="number"><br>
