add submit function to interface

--- a/index.html
+++ b/index.html
@@ -13,21 +13,14 @@
         <p class="lead">An application that determines a user’s age based on a planet’s solar years.</p>
       </div>
     </div>
-      <form id = "yearForm">
-        <label for = "age">Enter your age:</label>
+      <form id ="yearForm">
+        <label for ="age">Enter your Age:</label>
         <input id="age" type="number"><br>
-        <label for = "lifeExp">Enter Life Expectancy:</label>
+        <label for ="lifeExp">Enter Life Expectancy:</label>
         <input id="lifeExp" type="number"><br>
         <button class="btn btn-info" type="submit">Submit</button>
       </form>
-      <table>
-        <tr>
-          <th>Planet</th>
-          <th>Age on that planet</th>
-          <th>Life Expectancy</th>
-        </tr>
-        <div id = "result">
-        </div>
-      </table>
+      <div id ="result">
+      </div>
     </body>
 </html>
