Refactor index and interface files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </div>
       <form id="yearForm">
         <label for ="age">Enter your Age:</label>
-        <input id="age" type="number"><br>
+        <input id="age" type="number" min="0"><br>
+        <label for ="lifeExp">Choose a country</label>
         <select class ="form-control" id="lifeExp">
           <option>United States</option>
           <option>Japan</option>
@@ -26,6 +27,18 @@
         <button class="btn btn-info" type="submit">Submit</button>
       </form></br>
       <div id="result">
+        <h3>Mercury</h3>
+        <h4>Age: <span class="planet1"><span></h4>
+        <h4>Life expectancy: <span class="lifeExp1"><span></h4>
+        <h3>Venus</h3>
+        <h4>Age: <span class="planet2"><span></h4>
+        <h4>Life expectancy: <span class="lifeExp1"><span></h4>
+        <h3>Mars</h3>
+        <h4>Age: <span class="planet3"><span></h4>
+        <h4>Life expectancy: <span class="lifeExp1"><span></h4>
+        <h3>Jupiter</h3>
+        <h4>Age: <span class="planet4"><span></h4>
+        <h4>Life expectancy: <span class="lifeExp1"><span></h4>
       </div>
     </body>
 </html>
