All three test pass

--- a/index.html
+++ b/index.html
@@ -16,13 +16,8 @@
       <form id="yearForm">
         <label for ="age">Enter your Age:</label>
         <input id="age" type="number" min="0"><br>
-        <label for ="lifeExp">Choose a country</label>
-        <select class ="form-control" id="lifeExp">
-          <option>United States</option>
-          <option>Japan</option>
-          <option>France</option>
-          <option>Mexico</option>
-        </select><br>
+        <label for ="lifeExp">Enter a country Life expectancy</label>
+        <input id="lifeExp" type="number" min="0"><br> 
         <button class="btn btn-info" type="submit">Submit</button>
       </form></br>
       <div id="result">
